--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "@nestjs/typeorm": "^10.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
